--- a/index.html
+++ b/index.html
@@ -2,83 +2,139 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Bootstrap Library  -->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="css/styles.css" />
+
+  <!-- Google Fonts  -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700;900&family=Ubuntu:wght@500&display=swap"
+    rel="stylesheet" />
+
+  <!-- For fonts rendering directly from the website  -->
+  <script src="https://kit.fontawesome.com/6676ec4194.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
   <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
 
-    <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark pb-5 mb-5">
+        <a class="navbar-brand" href="#">Tindog</a>
 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
+      <!-- Title -->
 
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 class="font-weight-bold">Meet new and interesting dogs nearby.</h1>
+          <button class="btn btn-dark btn-lg mr-2" type="button">
+            <i class="fab fa-apple"></i> Download
+          </button>
+          <button class="btn btn-outline-light btn-lg ml-2" type="button">
+            <i class="fab fa-google-play"></i> Download
+          </button>
+        </div>
+        <div class="col-md-6">
+          <img class="rotate" src="images/iphone6.png" alt="iphone-mockup" />
+        </div>
+      </div>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
   </section>
+
 
 
   <!-- Features -->
 
   <section id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <div class="container-fluid">
+      <div class="row">
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+        <div class="col-lg-4">
+            <i class="fas fa-check-circle checked-circle"></i>
+          
+          <h3>Easy to use.</h3>
+          <p class="features-content">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-bullseye checked-circle "></i>
+          <h3>Elite Clientele</h3>
+          <p class="features-content">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-heart checked-circle"></i>
+          <h3>Guaranteed to work.</h3>
+          <p class="features-content">Find the love of your dog's life or your money back.</p>
+        </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
+
+    <hr class="horizontal-line">
   </section>
-
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <h2>
+      I no longer have to sniff other dogs for love. I've found the hottest
+      Corgi on TinDog. Woof.
+    </h2>
+    <img src="images/dog-img.jpg" alt="dog-profile" />
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
-
   </section>
-
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
+    <img src="images/techcrunch.png" alt="tc-logo" />
+    <img src="images/tnw.png" alt="tnw-logo" />
+    <img src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img src="images/mashable.png" alt="mashable-logo" />
   </section>
-
 
   <!-- Pricing -->
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
 
     <h3>Chihuahua</h3>
     <h2>Free</h2>
@@ -87,14 +143,12 @@
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
 
-
     <h3>Labrador</h3>
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
-
 
     <h3>Mastiff</h3>
     <h2>$99 / mo</h2>
@@ -103,30 +157,33 @@
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
     <button type="button">Sign Up</button>
-
   </section>
-
 
   <!-- Call to Action -->
 
   <section id="cta">
-
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
-
   </section>
-
 
   <!-- Footer -->
 
   <footer id="footer">
-
     <p>© Copyright 2018 TinDog</p>
-
   </footer>
 
+  <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
