--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
+  <!-- Personal CSS Style Sheet -->
   <link rel="stylesheet" href="css/styles.css" />
 
   <!-- Google Fonts  -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700;900&family=Ubuntu:wght@500&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700;900&family=Ubuntu:wght@500&display=swap"
     rel="stylesheet" />
 
   <!-- For fonts rendering directly from the website  -->
   <script src="https://kit.fontawesome.com/6676ec4194.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
   <section id="title">
     <div class="container-fluid">
-      <!-- Nav Bar -->
 
+      <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark pb-5 mb-5">
         <a class="navbar-brand" href="#">Tindog</a>
 
@@ -36,19 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Home</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">About</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -59,10 +56,10 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="font-weight-bold">Meet new and interesting dogs nearby.</h1>
-          <button class="btn btn-dark btn-lg mr-2" type="button">
+          <button class="btn btn-dark btn-lg title-btn" type="button">
             <i class="fab fa-apple"></i> Download
           </button>
-          <button class="btn btn-outline-light btn-lg ml-2" type="button">
+          <button class="btn btn-outline-light btn-lg title-btn" type="button">
             <i class="fab fa-google-play"></i> Download
           </button>
         </div>
@@ -74,7 +71,6 @@
   </section>
 
 
-
   <!-- Features -->
 
   <section id="features">
@@ -83,18 +79,18 @@
       <div class="row">
 
         <div class="col-lg-4">
-            <i class="fas fa-check-circle checked-circle"></i>
-          
+          <i class="fas fa-check-circle fa-4x checked-circle"></i>
+
           <h3>Easy to use.</h3>
           <p class="features-content">So easy to use, even your dog could do it.</p>
         </div>
         <div class="col-lg-4">
-          <i class="fas fa-bullseye checked-circle "></i>
+          <i class="fas fa-bullseye fa-4x checked-circle "></i>
           <h3>Elite Clientele</h3>
           <p class="features-content">We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="col-lg-4">
-          <i class="fas fa-heart checked-circle"></i>
+          <i class="fas fa-heart checked-circle fa-4x"></i>
           <h3>Guaranteed to work.</h3>
           <p class="features-content">Find the love of your dog's life or your money back.</p>
         </div>
@@ -102,32 +98,52 @@
       </div>
     </div>
 
-
-    <hr class="horizontal-line">
   </section>
+
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <h2>
-      I no longer have to sniff other dogs for love. I've found the hottest
-      Corgi on TinDog. Woof.
-    </h2>
-    <img src="images/dog-img.jpg" alt="dog-profile" />
-    <em>Pebbles, New York</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <!-- Carausel for slide show -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>
+            I no longer have to sniff other dogs for love. I've found the hottest
+            Corgi on TinDog. Woof.
+          </h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile" />
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+            their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span> <!-- for Screen Read Only so we can omit this for now..-->
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+
   </section>
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo" />
-    <img src="images/tnw.png" alt="tnw-logo" />
-    <img src="images/bizinsider.png" alt="biz-insider-logo" />
-    <img src="images/mashable.png" alt="mashable-logo" />
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
   </section>
 
   <!-- Pricing -->
@@ -136,41 +152,83 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <div class="row">
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
   </section>
 
   <!-- Call to Action -->
 
   <section id="cta">
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+
+    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-dark btn-lg cta-btn" type="button">
+      <i class="fab fa-apple"></i> Download
+    </button>
+    <button class="btn btn-light btn-lg cta-btn" type="button">
+      <i class="fab fa-google-play"></i> Download
+    </button>
+
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
-    <p>© Copyright 2018 TinDog</p>
+    <div>
+      <i class="fab fa-twitter footer-icon"></i>
+      <i class="fab fa-facebook-f footer-icon"></i>
+      <i class="fab fa-instagram footer-icon"></i>
+      <i class="fas fa-envelope footer-icon"></i>
+      <p class="footer-content">© Copyright 2018 TinDog</p>
+    </div>
+    
   </footer>
 
   <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
