--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <section id="title">
+  <section class = "colored-section" id="title">
     <div class="container-fluid">
 
       <!-- Nav Bar -->
@@ -55,7 +55,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="font-weight-bold">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button class="btn btn-dark btn-lg title-btn" type="button">
             <i class="fab fa-apple"></i> Download
           </button>
@@ -64,7 +64,7 @@
           </button>
         </div>
         <div class="col-md-6">
-          <img class="rotate" src="images/iphone6.png" alt="iphone-mockup" />
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
         </div>
       </div>
     </div>
@@ -73,43 +73,41 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
-    <div class="container-fluid">
       <div class="row">
 
         <div class="col-lg-4">
           <i class="fas fa-check-circle fa-4x checked-circle"></i>
 
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p class="features-content">So easy to use, even your dog could do it.</p>
         </div>
         <div class="col-lg-4">
           <i class="fas fa-bullseye fa-4x checked-circle "></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p class="features-content">We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="col-lg-4">
           <i class="fas fa-heart checked-circle fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p class="features-content">Find the love of your dog's life or your money back.</p>
         </div>
 
       </div>
-    </div>
 
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <!-- Carausel for slide show -->
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>
+          <h2 class="testimonial-text">
             I no longer have to sniff other dogs for love. I've found the hottest
             Corgi on TinDog. Woof.
           </h2>
@@ -148,8 +146,8 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
-    <h2>A Plan for Every Dog's Needs</h2>
+  <section class="white-section" id="pricing">
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
@@ -160,7 +158,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -175,7 +173,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -190,7 +188,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -206,9 +204,9 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button class="btn btn-dark btn-lg cta-btn" type="button">
       <i class="fab fa-apple"></i> Download
     </button>
@@ -220,7 +218,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div>
       <i class="fab fa-twitter footer-icon"></i>
       <i class="fab fa-facebook-f footer-icon"></i>
